gitlab/gitlab-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    name: gitlab
spec:
  selector:
    k8s-app: gitlab
  ports:
    - port: 8082
      targetPort: 8082
